--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@react-google-maps/api": "^2.10.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.3.3",
@@ -16,7 +16,7 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
-    "saas": "^1.0.0",
+    "node-sass": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^7.0.1"
+   
   }
 }
