--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-app",
+  "name": "MDFC",
   "version": "0.1.0",
   "homepage": "https://Ishan-Garg17.github.io/MDFC",
   "private": true,
